--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,33 @@
 {
-	"name": "tharangakothalawala/sso",
-	"description": "This is a library which can provision new accounts and to authenticate users utilizing third party vendor connections.",
-	"type": "library",
-	"license": "MIT",
-	"authors": [{
-		"name": "Tharanga Kothalawala",
-		"email": "tharanga.kothalawala@gmail.com"
-	}],
-	"minimum-stability": "dev",
-	"require": {
-		"php": ">=5.3",
-		"google/apiclient": "^2.0@dev",
-		"facebook/graph-sdk": "^5.4"
-	},
-	"require-dev": {
-		"phpunit/phpunit": "~4.8 || ~6.0",
-		"mockery/mockery": "^0.9 || ^1.0@dev",
-		"squizlabs/php_codesniffer": "^3.0@dev",
-		"phpdocumentor/phpdocumentor": "dev-master"
-	},
-	"autoload": {
-		"psr-4": {
-			"TSK\\SSO\\": "src/"
-		}
-	},
-	"autoload-dev": {
-		"psr-4": {
-			"TSK\\SSO\\": "tests/"
-		}
-	}
+    "name": "tharangakothalawala/sso",
+    "description": "This is a library which can provision new accounts and to authenticate users utilizing third party vendor connections.",
+    "keywords": ["sso", "signup", "signin", "register", "login", "provision"],
+    "type": "library",
+    "license": "MIT",
+    "authors": [{
+        "name": "Tharanga Kothalawala",
+        "email": "tharanga.kothalawala@gmail.com"
+    }],
+    "minimum-stability": "dev",
+    "require": {
+        "php": ">=5.3",
+        "google/apiclient": "^2.0@dev",
+        "facebook/graph-sdk": "^5.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4.8 || ~6.0",
+        "mockery/mockery": "^0.9 || ^1.0@dev",
+        "squizlabs/php_codesniffer": "^3.0@dev",
+        "phpdocumentor/phpdocumentor": "dev-master"
+    },
+    "autoload": {
+        "psr-4": {
+            "TSK\\SSO\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "TSK\\SSO\\": "tests/"
+        }
+    }
 }
