--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
     "require": {
         "php": ">=5.3",
         "google/apiclient": "^2.0@dev",
-        "facebook/graph-sdk": "^5.4"
+        "facebook/graph-sdk": "^5.4",
+        "happyr/linkedin-api-client": "v1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8 || ~6.0",
-        "mockery/mockery": "^0.9 || ^1.0@dev",
+        "mockery/mockery": "^0.9 || ^1.0@dev"
     },
     "autoload": {
         "psr-4": {
