--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "require": {
         "php": ">=5.3",
         "google/apiclient": "^2.0@dev",
-        "facebook/graph-sdk": "^5.4",
-        "happyr/linkedin-api-client": "v1.0.0"
+        "facebook/graph-sdk": "^5.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8 || ~6.0",
