--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,26 @@
 language: php
 php:
-  - '5.6'
-  - '7.0'
+  - 5.5
+  - 5.6
+  - 7.0
+  - 7.1
+
+env:
+  global:
+    - TEST_COMMAND="make tests"
+
+matrix:
+  fast_finish: true
+  include:
+    - php: 5.5
+      env: COVERAGE=true TEST_COMMAND="make tests-ci"
 
 before_script:
   - composer install --no-interaction
 
-script: phpunit
+script:
+  - $TEST_COMMAND
+
+after_success:
+  - if [[ $COVERAGE = true ]]; then wget https://scrutinizer-ci.com/ocular.phar; fi
+  - if [[ $COVERAGE = true ]]; then php ocular.phar code-coverage:upload --format=php-clover build/coverage.xml; fi
