--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": ">=5.3",
         "google/apiclient": "^2.0@dev",
-        "facebook/graph-sdk": "^5.4"
+        "facebook/graph-sdk": "^5.4",
+        "abraham/twitteroauth": "0.9.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8 || ~6.0",
