--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3",
+        "ext-curl": "*",
+        "ext-json": "*",
         "google/apiclient": "^2.0@dev",
         "facebook/graph-sdk": "^5.4",
         "abraham/twitteroauth": "0.9.2"
